- Added Migration to the Schema - Async Data Save To Realm - Return list to avoid getting data from database

--- a/Poketest/app/src/main/res/layout/activity_home.xml
+++ b/Poketest/app/src/main/res/layout/activity_home.xml
@@ -26,14 +26,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    style="@style/TxtToolbarTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:id="@+id/layoutToolbarWrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/txt_toolbar_all_pokemon" />
+                    android:layout_centerVertical="true">
+
+                    <TextView
+                        style="@style/TxtToolbarTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/txt_toolbar_all_pokemon" />
+
+                </LinearLayout>
+
 
             </RelativeLayout>
 
@@ -50,6 +58,7 @@
             android:id="@+id/list_food"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="vertical"
             tools:listitem="@layout/list_item_pokemon" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
