--- a/Poketest/app/src/main/res/values/styles.xml
+++ b/Poketest/app/src/main/res/values/styles.xml
@@ -35,4 +35,30 @@
         <item name="android:inputType">textCapSentences</item>
     </style>
 
+    <style name="TxtPokemonType" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:lines">1</item>
+        <item name="android:paddingRight">5dp</item>
+    </style>
+
+
+    <style name="TxtPokemonDetailSection" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center|left</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+    <style name="TxtPokemonDetail" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center|left</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingLeft">15dp</item>
+    </style>
 </resources>
