--- a/Poketest/app/src/main/res/values/styles.xml
+++ b/Poketest/app/src/main/res/values/styles.xml
@@ -10,6 +10,17 @@
     <style name="PokeTheme" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <!-- enable window content transitions -->
+        <item name="android:windowContentTransitions">true</item>
+
+        <!-- specify shared element transitions -->
+        <item name="android:windowSharedElementEnterTransition">
+            @transition/change_image_transform
+        </item>
+        <item name="android:windowSharedElementExitTransition">
+            @transition/change_image_transform
+        </item>
     </style>
 
     <style name="TxtToolbarTitle" parent="@android:style/Widget.TextView">
