--- a/Poketest/app/src/main/res/layout/list_item_pokemon.xml
+++ b/Poketest/app/src/main/res/layout/list_item_pokemon.xml
@@ -30,6 +30,7 @@
                 android:id="@+id/imgRowIcon"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:transitionName="@string/activity_image_trans"
                 android:layout_weight="3"
                 android:scaleType="centerInside"
                 fresco:actualImageScaleType="centerInside" />
