--- a/Poketest/app/src/main/res/layout/list_item_pokemon.xml
+++ b/Poketest/app/src/main/res/layout/list_item_pokemon.xml
@@ -30,10 +30,13 @@
                 android:id="@+id/imgRowIcon"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:transitionName="@string/activity_image_trans"
                 android:layout_weight="3"
                 android:scaleType="centerInside"
-                fresco:actualImageScaleType="centerInside" />
+                android:transitionName="@string/activity_image_trans"
+                fresco:actualImageScaleType="centerInside"
+                fresco:fadeDuration="100"
+                fresco:failureImage="@drawable/retry"
+                fresco:retryImageScaleType="centerCrop" />
 
             <com.freakybyte.poketest.ui.textview.CapitalizedTextView
                 android:id="@+id/txtRowTitle"
